E-learning/force-app/main/default/objects/Trail_Module__c/Trail_Module__c.object-meta.xml
<CustomObject>
    <label>Trail/Module</label>
    <nameField>
        <label>Trail/Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trail/modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>