E-learning/force-app/main/default/objects/Trail_Module__c/fields/Points_TrialModule__c.field-meta.xml
<CustomField>
    <fullName>Points_TrialModule__c</fullName>
    <description>How much points the user gets</description>
    <label>Points TrialModule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>