E-learning/force-app/main/default/objects/Trail_Module__c/fields/Time_estimated__c.field-meta.xml
<CustomField>
    <fullName>Time_estimated__c</fullName>
    <label>Time estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>