E-learning/force-app/main/default/objects/Trail_Module__c/fields/Trail__c.field-meta.xml
<CustomField>
    <fullName>Trail__c</fullName>
    <description>Relation between the Trail and this transactional table</description>
    <label>Trail</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>Trail/modules</relationshipLabel>
    <relationshipName>Trail_modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>